--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "PixelMix";
-    src: url("fonts/pixelmix.ttf") format("truetype");
+    src: url("./pixelmix.ttf") format("truetype");
     font-weight: normal;
 }
 
